# acts_faser2

./: HepMC_to_ACTSROOT.py  README.md  Setup_acts.sh
Core/include/Acts/MagneticField/: RestrictedBField.hpp  RestrictedBField.hpp~  RestrictedBField_Indu.hpp  RestrictedBField_Indu_1Modules.hpp  RestrictedBField_Indu_2Modules.hpp  RestrictedBField_Indu_3Modules.hpp  RestrictedBField_Indu_4Modules.hpp
Examples/Detectors/: CMakeLists.txt
Examples/Detectors/Faser2TelescopeDetector/: CMakeLists.txt
Examples/Detectors/Faser2TelescopeDetector/include/ActsExamples/Faser2TelescopeDetector/: BuildFaser2TelescopeDetector.hpp  Faser2TelescopeDetector.hpp  Faser2TelescopeDetectorElement.hpp
Examples/Detectors/Faser2TelescopeDetector/src/: BuildFaser2TelescopeDetector.cpp  Faser2TelescopeDetector.cpp  Faser2TelescopeDetectorElement.cpp
Examples/Detectors/TelescopeDetector/src/: BuildTelescopeDetector.cpp
Examples/Io/Root/include/ActsExamples/Io/Root/: RootParticleWriter.hpp
Examples/Io/Root/src/: RootParticleReader.cpp  RootParticleWriter.cpp
Examples/Python/: CMakeLists.txt
Examples/Python/src/: Detector.cpp  MagneticField.cpp
Examples/Scripts/Python/: truth_tracking_Faser2.py  truth_tracking_tel_f2.py
Field_map/: SeveralDiskPlot.txt
Output_example_Analysis/: Analysis_plot_ACTS.ipynb
Root_input_LLP/: HepMC_Root_X_Events.py  Particles_muon_FLArE.root
