add_subdirectory(ContextualDetector)
add_subdirectory_if(DD4hepDetector ACTS_BUILD_EXAMPLES_DD4HEP)
add_subdirectory(GenericDetector)
add_subdirectory_if(Geant4Detector ACTS_BUILD_EXAMPLES_GEANT4)
add_subdirectory(MagneticField)
add_subdirectory(TGeoDetector)
add_subdirectory(ITkModuleSplitting)
add_subdirectory(TelescopeDetector)
add_subdirectory(Faser2TelescopeDetector)
# Add the include directory for Faser2TelescopeDetector to the global include paths
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Faser2TelescopeDetector/include)
add_subdirectory_if(MuonSpectrometerMockupDetector ACTS_BUILD_EXAMPLES_GEANT4)
